<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_store"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_wishlist"
        android:icon="@drawable/ic_wishlist"
        android:title="@string/title_wishlist" />

    <item
        android:id="@+id/navigation_bag"
        android:icon="@drawable/ic_bag"
        android:title="@string/title_bag" />

    <item
        android:id="@+id/navigation_orders"
        android:icon="@drawable/ic_orders"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/navigation_more"
        android:icon="@drawable/ic_more"
        android:title="@string/title_more" />

</menu>