<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorAccent"
    android:layout_width="match_parent"
    android:layout_height="52dp">

    <Button
        android:id="@+id/view_paging_prev"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/ic_pagination_unselected"
        android:maxWidth="0dp"
        android:maxHeight="0dp"
        android:text="@string/prev"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/view_paging_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/page_x_of_y"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/view_paging_next"
        app:layout_constraintStart_toEndOf="@+id/view_paging_prev"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/view_paging_next"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/ic_pagination_unselected"
        android:maxWidth="0dp"
        android:maxHeight="0dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>